<resources>
    <string name="app_name">UET Plus</string>
    <string name="version">Version BETA 2.1</string>
    <string name="app_description">UET Plus - Ứng dụng hỗ trợ sinh viên, người học theo dõi các hoạt động của trường một cách chủ động hơn.\nĐây là ứng dụng hoàn toán miễn phí. Những chi phí phát sinh trong quá trình sử dụng ứng dụng đều do nhà mạng thu phí.\n \n \nLiên hệ chúng tôi : uetplus@gmail.com </string>
    <string name="app_license">Bản quyền Copyright &#169; 2020 HyperMiner, Inc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="e_mail">Email</string>
    <string name="tag">BETA 2.0</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="channel_name">test</string>
    <string name="channel_description">test</string>
</resources>
