<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="right"
            >
            <RadioGroup
                android:id="@+id/toggle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/pink_out_line"
                android:checkedButton="@+id/view_type"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/list_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="List"
                    android:textColor="#FFF"
                    android:textSize="14dp"
                    />

                <RadioButton
                    android:id="@+id/calendar_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="Calendar"
                    android:textColor="#FFF"
                    android:textSize="14dp"
                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFF"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:id="@+id/calendar_view_layout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D4F8D9"
                app:cardCornerRadius="5dp"
                app:cardElevation="30dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tháng"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="#131415"
                        />
                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Năm"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:textColor="#1F2027"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <GridLayout
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:columnCount="7"
            android:rowCount="9"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="14dp"
            >
            <!--        row2-->


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"

                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#E6F1D1"
                >
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/mon"
                        android:textColor="#000"
                        android:textSize="14dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#E6F1D1"
                >
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tue"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="14dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#E6F1D1"
                >
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wed"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="14dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#E6F1D1"
                >
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thu"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="14dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#E6F1D1"
                >
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/fri"
                        android:textSize="14dp"
                        android:textColor="#000" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#E6F1D1"
                >
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sat"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="14dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#FF7C7C"
                >
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sun"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="14dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/list_view_layout"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="8"
        android:orientation="vertical"
        >
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</LinearLayout>